--- a/JavaScript30-master/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/JavaScript30-master/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -99,6 +99,37 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+  console.log(checkboxes);
+
+  let lastChecked;
+
+  function handleCheck(e) {
+    // Check if user had shift key down AND if they are checking (not unchecking)
+
+    let inBetween = false;
+
+    if (e.shiftKey && this.checked) {
+      // lastChecked = this;
+      // loop over every single check box
+      checkboxes.forEach( checkbox => {
+        console.log(checkbox);
+        if (checkbox === this || checkbox === lastChecked){
+          inBetween = !inBetween;
+          console.log('ou');
+        }
+
+        if (inBetween) {
+          checkbox.checked = true;
+        }
+      })
+    }
+
+    lastChecked = this;
+  }
+
+  checkboxes.forEach(checkbox => checkbox.addEventListener("click", handleCheck))
+
 </script>
 </body>
 </html>
