--- a/JavaScript30-master/14 - JavaScript References VS Copying/index-START.html
+++ b/JavaScript30-master/14 - JavaScript References VS Copying/index-START.html
@@ -9,12 +9,28 @@
   <script>
     // start with strings, numbers and booleans
 
+    // let age = 100;
+    // let age2 = age;
+    // console.log(age, age2)
+    // age = 200; 
+    // console.log(age, age2)
+
+    // let name = "kurt"
+    // let name2 = name
+    // console.log(name, name2)
+    // name = "kurtio"
+    // console.log(name, name2)
+
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players;
+
+    console.log(players, team);
 
     // You might think we can just do something like this:
+    // team[3] = 'Lux'
 
     // however what happens when we update that array?
 
@@ -25,22 +41,42 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
+    const team2 = players.slice();
 
     // one way
 
     // or create a new array and concat the old one in
+    const team3 = [].concat(players);
 
     // or use the new ES6 Spread
+    const team4 = [...players];
+    team4[4] = '💩';
+    console.log(team4);
+
+    const team5 = Array.from(players);
 
     // now when we update it, the original one isn't changed
 
     // The same thing goes for objects, let's say we have a person object
+    const person = {
+        name: 'Ding Dong',
+        age: 100
+    }
 
     // with Objects
+    // const captain = person;
+    // captain.number = 99;
+    // captain.age = 90;
+    // console.log(captain)
+    // console.log(person)
 
     // and think we make a copy:
 
     // how do we take a copy instead?
+
+    const cap2 = Object.assign({}, person, {number:99, age:12});
+    console.log(cap2)
+    console.log(person)
 
     // We will hopefully soon see the object ...spread
 
